# AlisonReynolds_Weekly_Exploratory_Demos

./: .gitignore  README.md
case_convert/: Cargo.toml
case_convert/src/: lib.rs  main.rs
decision_tree/: Cargo.toml
decision_tree/src/: lib.rs  main.rs
how_long/: Cargo.toml
how_long/src/: lib.rs  main.rs
madlibs/: Cargo.toml
madlibs/src/: main.rs
plotting/: Cargo.toml
plotting/src/: main.rs
random/: Cargo.toml
random/src/: lib.rs  main.rs
random/tests/: cli.rs
random_distroless/: Cargo.toml  Makefile
random_distroless/src/: lib.rs  main.rs
svm/: Cargo.toml
svm/src/: main.rs
temperature/: Cargo.toml
temperature/src/: lib.rs  main.rs
time_to_eat/: Cargo.toml
time_to_eat/src/: lib.rs  main.rs
